[package]
name = "snakeRust"
version = "0.1.0"
edition = "2021"
authors = ["Alyson Lima <>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
bevy = "0.6.0"
noise = "0.7"
perlin_noise = "1.0.1"
ndarray = "*"
image = "0.24.0"